# UASD

./: .gitignore  CMakeLists.txt  LICENSE  Python.gitignore  package.xml  readme.md  setup.py
GCS/: CMakeLists.txt  package.xml  setup.py
GCS/include/: geofence.h  mavlink_defines.h  path_planner.h
GCS/launch/: ground_control_station.launch  mavros_uasd_drone.launch
GCS/msg/: deploy_request.msg  dockData.msg  path.msg  setPreflightData.msg  toDroneData.msg  waypoint.msg
GCS/src/: docking_station_node.cpp  drone_communication_node.cpp  gcs_control_node.cpp  geofence.cpp  gsm_listener.py  gsm_talker.py  path_planner.cpp  path_planner_node.cpp  pre_flight_node.py  weather.py  web_interface.py  web_interface_node.py
GCS/srv/: planPath.srv  preFlight.srv  startMission.srv  uploadMission.srv
HumanInteraction/HumanInteraction.ino/: HumanInteraction.ino.ino
OES/: CMakeLists.txt  package.xml
OES/include/oes/: readme.md
OES/launch/: oes.launch
OES/pi_setup/: control_io.py  logger_OES_start.sh  start_up_sequence.sh  use_correct_gateway.sh  wait_for_internet.sh
OES/src/: ConnectionMonitor.py  DroneHandler.py  GpsModule.py  GpsMonitor.py  GsmHandler.py  LED_Control.py  OES.py  OnboardControl.py  PowerCutoff.py  RPiGpio.py  WebInterface.py  fc_communication_node.cpp  fly.py  gcs_communication_node.cpp  geofence_control_node.cpp  gpsModule.py  gps_node.cpp  kombuProducer.py  led_control_node.cpp  oes_control_node.cpp  print_mavlink_msg.py  test_OES_mission_upload.py
OES/src/gpsModule/: gpsModule.py
OES/src/rabbitMQ_test_script/: receive_toDrone.py  receive_toGcs.py  send_toDrone.py  send_toGcs.py
WEB/: add_smartphone_request.php  approve_request.php  get_aed_info.php  get_drones.php  get_requests.php  get_specific_request_single.php  index.html  reject_request.php  set_drone_comment.php  set_drone_completed.php  set_drone_current_position.php  set_drone_preflight.php  set_drone_state.php  set_drone_target_position.php  set_drone_weather.php  show_drones.php  show_request.php  show_requests.php  style.css  table.css
WEB/admin/: approve_request.php  complete_request.php  disapprove_request.php  get_drone_data.php  get_drone_stop.php  get_request_stop.php  get_requests.php  get_specific_request.php  get_specific_request_single.php  index.php  make_request.php  map-and-sender.js  reject_request.php  set_drone_current_position.php  set_drone_path.php  (+10 more)
depends/: ros-kinetic-mavlink_2017.8.8-0xenial-20170807-233439-0800_amd64.deb
msg/: dockData.msg
scripts/: start_docking_station.sh
src/: docking_station_node.py
srv/: openDock.srv
(+15 files in other folders)
